--- a/tests.ipynb
+++ b/tests.ipynb
@@ -55,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "edc6f33a",
+   "id": "94dcfe03",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -8226,7 +8226,7 @@
    "id": "aaadbb8d",
    "metadata": {},
    "source": [
-    "# Autism Screening Adult Data Set "
+    "# Autism Screening Dataset"
    ]
   },
   {
@@ -9101,7 +9101,7 @@
    "id": "dcccc26a",
    "metadata": {},
    "source": [
-    "##   Arrhythmia Data Set "
+    "#  Arrhythmia Data Set "
    ]
   },
   {
