added the functions script that does several things

--- a/tests-Copy1.ipynb
+++ b/tests-Copy1.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "444aec15",
    "metadata": {},
    "outputs": [],
@@ -62,6 +62,16 @@
     "import wittgenstein3 as lw\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "42ac6668",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import RandomizedSearchCV"
    ]
   },
   {
