--- a/tests_cv.ipynb
+++ b/tests_cv.ipynb
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "6eb557b8",
+   "id": "63d0c180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "832da3bb",
+   "id": "ae0d8467",
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "16ebe6b8",
+   "id": "a4a4d8c9",
    "metadata": {},
    "outputs": [
     {
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "4ba79aa7",
+   "id": "6e47ed97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1029,7 +1029,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "177abbe0",
+   "id": "b6f9ede2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1528,7 +1528,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "d682c095",
+   "id": "f5d2616f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "57972410",
+   "id": "a0a26807",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1900,7 +1900,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "f8aa36f1",
+   "id": "62edd4c3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1932,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "589445ea",
+   "id": "bf1b401e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1946,10 +1946,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "5b381bc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7208691646191646"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "acc = []\n",
     "\n",
@@ -1971,7 +1982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "id": "f852a323",
    "metadata": {},
    "outputs": [],
@@ -1981,17 +1992,379 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "id": "f3fa56c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "      <th>QRS_Dur</th>\n",
+       "      <th>P-R_Int</th>\n",
+       "      <th>Q-T_Int</th>\n",
+       "      <th>T_Int</th>\n",
+       "      <th>P_Int</th>\n",
+       "      <th>QRS</th>\n",
+       "      <th>...</th>\n",
+       "      <th>V6271</th>\n",
+       "      <th>V6272</th>\n",
+       "      <th>V6273</th>\n",
+       "      <th>V6274</th>\n",
+       "      <th>V6275</th>\n",
+       "      <th>V6276</th>\n",
+       "      <th>V6277</th>\n",
+       "      <th>V6278</th>\n",
+       "      <th>V6279</th>\n",
+       "      <th>diagnosis</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>190</td>\n",
+       "      <td>80</td>\n",
+       "      <td>91</td>\n",
+       "      <td>193</td>\n",
+       "      <td>371</td>\n",
+       "      <td>174</td>\n",
+       "      <td>121</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>-0.9</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>49.4</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>56</td>\n",
+       "      <td>1</td>\n",
+       "      <td>165</td>\n",
+       "      <td>64</td>\n",
+       "      <td>81</td>\n",
+       "      <td>174</td>\n",
+       "      <td>401</td>\n",
+       "      <td>149</td>\n",
+       "      <td>39</td>\n",
+       "      <td>25</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>8.5</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>20.4</td>\n",
+       "      <td>38.8</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>54</td>\n",
+       "      <td>0</td>\n",
+       "      <td>172</td>\n",
+       "      <td>95</td>\n",
+       "      <td>138</td>\n",
+       "      <td>163</td>\n",
+       "      <td>386</td>\n",
+       "      <td>185</td>\n",
+       "      <td>102</td>\n",
+       "      <td>96</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>-2.4</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>12.3</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>175</td>\n",
+       "      <td>94</td>\n",
+       "      <td>100</td>\n",
+       "      <td>202</td>\n",
+       "      <td>380</td>\n",
+       "      <td>179</td>\n",
+       "      <td>143</td>\n",
+       "      <td>28</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>12.2</td>\n",
+       "      <td>-2.2</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>34.6</td>\n",
+       "      <td>61.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>75</td>\n",
+       "      <td>0</td>\n",
+       "      <td>190</td>\n",
+       "      <td>80</td>\n",
+       "      <td>88</td>\n",
+       "      <td>181</td>\n",
+       "      <td>360</td>\n",
+       "      <td>177</td>\n",
+       "      <td>103</td>\n",
+       "      <td>-16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>-3.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-0.1</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>25.4</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>447</th>\n",
+       "      <td>53</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>70</td>\n",
+       "      <td>80</td>\n",
+       "      <td>199</td>\n",
+       "      <td>382</td>\n",
+       "      <td>154</td>\n",
+       "      <td>117</td>\n",
+       "      <td>-37</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>-5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.7</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>-4.4</td>\n",
+       "      <td>-0.5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>448</th>\n",
+       "      <td>37</td>\n",
+       "      <td>0</td>\n",
+       "      <td>190</td>\n",
+       "      <td>85</td>\n",
+       "      <td>100</td>\n",
+       "      <td>137</td>\n",
+       "      <td>361</td>\n",
+       "      <td>201</td>\n",
+       "      <td>73</td>\n",
+       "      <td>86</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>-1.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>62.4</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>449</th>\n",
+       "      <td>36</td>\n",
+       "      <td>0</td>\n",
+       "      <td>166</td>\n",
+       "      <td>68</td>\n",
+       "      <td>108</td>\n",
+       "      <td>176</td>\n",
+       "      <td>365</td>\n",
+       "      <td>194</td>\n",
+       "      <td>116</td>\n",
+       "      <td>-85</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>-28.6</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-44.2</td>\n",
+       "      <td>-33.2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>450</th>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>155</td>\n",
+       "      <td>55</td>\n",
+       "      <td>93</td>\n",
+       "      <td>106</td>\n",
+       "      <td>386</td>\n",
+       "      <td>218</td>\n",
+       "      <td>63</td>\n",
+       "      <td>54</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.4</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>-0.7</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>2.4</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>46.6</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>451</th>\n",
+       "      <td>78</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>70</td>\n",
+       "      <td>79</td>\n",
+       "      <td>127</td>\n",
+       "      <td>364</td>\n",
+       "      <td>138</td>\n",
+       "      <td>78</td>\n",
+       "      <td>28</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>10.4</td>\n",
+       "      <td>-1.8</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>21.3</td>\n",
+       "      <td>32.8</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>452 rows × 280 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Age  Sex  Height  Weight  QRS_Dur  P-R_Int  Q-T_Int  T_Int  P_Int  QRS  \\\n",
+       "0     75    0     190      80       91      193      371    174    121  -16   \n",
+       "1     56    1     165      64       81      174      401    149     39   25   \n",
+       "2     54    0     172      95      138      163      386    185    102   96   \n",
+       "3     55    0     175      94      100      202      380    179    143   28   \n",
+       "4     75    0     190      80       88      181      360    177    103  -16   \n",
+       "..   ...  ...     ...     ...      ...      ...      ...    ...    ...  ...   \n",
+       "447   53    1     160      70       80      199      382    154    117  -37   \n",
+       "448   37    0     190      85      100      137      361    201     73   86   \n",
+       "449   36    0     166      68      108      176      365    194    116  -85   \n",
+       "450   32    1     155      55       93      106      386    218     63   54   \n",
+       "451   78    1     160      70       79      127      364    138     78   28   \n",
+       "\n",
+       "     ...  V6271  V6272  V6273  V6274  V6275  V6276  V6277  V6278  V6279  \\\n",
+       "0    ...    0.0    9.0   -0.9    0.0    0.0    0.9    2.9   23.3   49.4   \n",
+       "1    ...    0.0    8.5    0.0    0.0    0.0    0.2    2.1   20.4   38.8   \n",
+       "2    ...    0.0    9.5   -2.4    0.0    0.0    0.3    3.4   12.3   49.0   \n",
+       "3    ...    0.0   12.2   -2.2    0.0    0.0    0.4    2.6   34.6   61.6   \n",
+       "4    ...    0.0   13.1   -3.6    0.0    0.0   -0.1    3.9   25.4   62.8   \n",
+       "..   ...    ...    ...    ...    ...    ...    ...    ...    ...    ...   \n",
+       "447  ...    0.0    4.3   -5.0    0.0    0.0    0.7    0.6   -4.4   -0.5   \n",
+       "448  ...    0.0   15.6   -1.6    0.0    0.0    0.4    2.4   38.0   62.4   \n",
+       "449  ...    0.0   16.3  -28.6    0.0    0.0    1.5    1.0  -44.2  -33.2   \n",
+       "450  ...   -0.4   12.0   -0.7    0.0    0.0    0.5    2.4   25.0   46.6   \n",
+       "451  ...    0.0   10.4   -1.8    0.0    0.0    0.5    1.6   21.3   32.8   \n",
+       "\n",
+       "     diagnosis  \n",
+       "0            8  \n",
+       "1            6  \n",
+       "2           10  \n",
+       "3            1  \n",
+       "4            7  \n",
+       "..         ...  \n",
+       "447          1  \n",
+       "448         10  \n",
+       "449          2  \n",
+       "450          1  \n",
+       "451          1  \n",
+       "\n",
+       "[452 rows x 280 columns]"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "96b999ff",
    "metadata": {},
    "outputs": [],
@@ -2003,8 +2376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5842539d",
+   "execution_count": 75,
+   "id": "15302a91",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2014,8 +2387,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bb9e8a27",
+   "execution_count": 76,
+   "id": "e4c80d76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2029,10 +2402,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "163afe8f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5406976744186047"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "acc = []\n",
     "\n",
@@ -2043,86 +2427,6 @@
     "    \n",
     "np.mean(acc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe4e3f99",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6638a588",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8e1eb455",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7c723a65",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "587b4f19",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0f2af500",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5959641",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ef1d2de2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "efa246a6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97a874ad",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
