--- a/cv_comparisons.ipynb
+++ b/cv_comparisons.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3f6db2b5",
+   "id": "a88d5a78",
    "metadata": {},
    "source": [
     "We will compare the performance of standard RIPPERk with enchanced RIPPERk. In the improved version we will first perform a hyperparameter selection step to choose the best value for W, then compare the two algorithms using the accuracy rate."
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "dfa3663e",
+   "id": "1bebf10d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,16 +25,30 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "101d7ce9",
+   "id": "70e5a3d5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import functions"
+    "import functions\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "de95c547",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set values of the hyperparameters\n",
+    "\n",
+    "cv = 5\n",
+    "budget = 12"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4d3500a5",
+   "id": "d91f62c1",
    "metadata": {},
    "source": [
     "# Thyroid dataset"
@@ -42,8 +56,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "f98b3f02",
+   "execution_count": 4,
+   "id": "100f4933",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,8 +66,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "019b689d",
+   "execution_count": 5,
+   "id": "4c5400d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,33 +77,200 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8ce4b312",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "__init__() got an unexpected keyword argument 'W'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-f9f5329fdf96>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfunctions\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0macc_rate_with_param_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_feat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_class\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparam\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'W'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbudget\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Desktop\\Statistics and data Science\\Master Thesis\\Code\\functions.py\u001b[0m in \u001b[0;36macc_rate_with_param_selection\u001b[1;34m(df, class_feat, pos_class, cv, param, W, budget)\u001b[0m\n\u001b[0;32m    115\u001b[0m     \u001b[1;31m# Find the best value for W\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    116\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 117\u001b[1;33m     \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mparam_selection\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mclass_feat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpos_class\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mparam\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m'W'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbudget\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbudget\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    118\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    119\u001b[0m     \u001b[1;31m# Train the algorithms\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Statistics and data Science\\Master Thesis\\Code\\functions.py\u001b[0m in \u001b[0;36mparam_selection\u001b[1;34m(X_train, class_feat, pos_class, cv, param, W, budget)\u001b[0m\n\u001b[0;32m     95\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     96\u001b[0m             \u001b[0mi\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 97\u001b[1;33m             \u001b[0mbest_point\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreturn_best_a\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minterval\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     98\u001b[0m             \u001b[0minterval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mc\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbest_point\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     99\u001b[0m             \u001b[0mc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mc\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mbest_point\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Desktop\\Statistics and data Science\\Master Thesis\\Code\\functions.py\u001b[0m in \u001b[0;36mreturn_best_a\u001b[1;34m(interval)\u001b[0m\n\u001b[0;32m     82\u001b[0m             \u001b[0mscore_a\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mripper_clf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     83\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 84\u001b[1;33m             \u001b[0mripper_clf\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mRIPPER\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mk\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     85\u001b[0m             \u001b[0mscore_b\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcross_val_score\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mripper_clf\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcv\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     86\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: __init__() got an unexpected keyword argument 'W'"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "id": "64ccf2c0",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
    "source": [
-    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = 5, param = 'W', W = None, budget = 4)"
+    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = cv, param = 'W', W = None, budget = budget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f3590bc",
+   "metadata": {},
+   "source": [
+    "# Audiology (Standardized) Data Set"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7f1ebc81",
+   "id": "2cc625a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.load_audiology()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1181de7b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_feat = 'Class'\n",
+    "pos_class = 'cochlear_poss_noise'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb92a880",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = cv, param = 'W', W = None, budget = budget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1640845f",
+   "metadata": {},
+   "source": [
+    "# Autism Screening Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39ec4b12",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.load_autism_screening()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9d6e4ab4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_feat = 'Class/ASD'\n",
+    "pos_class = 'YES'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7409fec8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = cv, param = 'W', W = None, budget = budget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4164e244",
+   "metadata": {},
+   "source": [
+    "#  Adult Data Set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71b785f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('https://archive.ics.uci.edu/ml/machine-learning-databases/adult/adult.data')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54588063",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_feat = ' <=50K'\n",
+    "pos_class = ' <=50K'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5ed0aac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = cv, param = 'W', W = None, budget = budget)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f1aa2c3f",
+   "metadata": {},
+   "source": [
+    "#  Arrhythmia Data Set "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ca677d0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = data.load_arrhythmia()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e9717096",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class_feat = 'diagnosis'\n",
+    "pos_class = 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db82e50d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "functions.acc_rate_with_param_selection(df, class_feat, pos_class, cv = cv, param = 'W', W = None, budget = budget)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ac71a9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ccf3c84b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c2a2128",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd59ba15",
    "metadata": {},
    "outputs": [],
    "source": []
