--- a/test_w_sample_size.ipynb
+++ b/test_w_sample_size.ipynb
@@ -82,7 +82,7 @@
    "source": [
     "#create 3D dataset\n",
     "xarray_3d = xr.Dataset(\n",
-    "    {\"thyroid\": ((\"year\", \"quarter\"), np.zeros((len(test_sizes), n_repetitions)))},\n",
+    "    {\"thyroid\": ((\"test_size\", \"repetition\"), np.zeros((len(test_sizes), n_repetitions)))},\n",
     "    coords={\n",
     "        \"test_size\": test_sizes,\n",
     "        \"repetition\": list(range(1, n_repetitions + 1)),\n",
@@ -100,21 +100,16 @@
     "    \n",
     "    # If the dataset is different from thyroid first adjourn it adding a new column\n",
     "    if name != 'thyroid':\n",
-    "        results[name] = np.zeros((len(test_sizes), len(n_repetitions)))\n",
+    "        results[name] = np.zeros(len(test_sizes)*len(n_repetitions))\n",
     "    \n",
     "    for test_size in test_sizes:\n",
-    "        ws = []\n",
     "        \n",
     "        for i in range(n_repetitions):\n",
     "\n",
     "            X_train, _ = train_test_split(df, test_size = test_size)\n",
     "            w = functions.param_selection(X_train, class_feat, pos_class, cv = cv, verbosity = False)\n",
-    "            ws += []\n",
-    "        print(name + ' with test size ' + str(test_size) + ' completed')\n",
-    "        \n",
-    "        # Define the indexes of the dataframe to adjourn\n",
-    "        #indexes = (results.index.get_level_values('test_size') == test_size)\n",
-    "        results.loc[test_size, name] = ws"
+    "            results.loc[(i + 1, test_size), name] = w\n",
+    "        print(name + ' with test size ' + str(test_size) + ' completed')\n"
    ]
   },
   {
@@ -483,8 +478,420 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "059454c6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>thyroid</th>\n",
+       "      <th>sdbbbv</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>repetition</th>\n",
+       "      <th>test_size</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">2</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">3</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">4</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">5</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">6</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">7</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">8</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">9</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">10</th>\n",
+       "      <th>0.10</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>20.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.20</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.33</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.50</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.66</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      thyroid  sdbbbv\n",
+       "repetition test_size                 \n",
+       "1          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "2          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           2.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "3          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "4          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "5          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "6          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "7          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "8          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "9          0.10           0.0     0.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0\n",
+       "10         0.10           0.0    20.0\n",
+       "           0.20           0.0     0.0\n",
+       "           0.33           0.0     0.0\n",
+       "           0.50           0.0     0.0\n",
+       "           0.66           0.0     0.0"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "884bbc34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.loc[(2,0.5), 'thyroid'] = 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "45d4f935",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results.loc[(10,0.1),'sdbbbv'] = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "420a4801",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.zeros((len(test_sizes), n_repetitions))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "66b4424a",
    "metadata": {},
    "outputs": [],
    "source": []
