--- a/test_w_sample_size.ipynb
+++ b/test_w_sample_size.ipynb
@@ -38,7 +38,7 @@
    "source": [
     "# Set values of the hyperparameters and load the dictionary with all the datasets and class features\n",
     "\n",
-    "cv = 10\n",
+    "cv = 5\n",
     "budget = 12\n",
     "\n",
     "with open('datasets_classlabels.pkl', 'rb') as fp:\n",
@@ -70,7 +70,7 @@
     "    \n",
     "n = len(w_df)\n",
     "n_repetitions = 10\n",
-    "test_sizes = [0.1, 0.2, 0.33, 0.5, 0.66]  # We will study the cases where the test size is this proportion of the total"
+    "test_sizes = [0.2, 0.33, 0.5, 0.66]  # We will study the cases where the test size is this proportion of the total"
    ]
   },
   {
@@ -110,6 +110,16 @@
     "            w = functions.param_selection(X_train, class_feat, pos_class, cv = cv, verbosity = False)\n",
     "            results.loc[(i + 1, test_size), name] = w\n",
     "        print(name + ' with test size ' + str(test_size) + ' completed')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f63992d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Expected end of run: wednesday at 16.30"
    ]
   },
   {
@@ -846,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "884bbc34",
+   "id": "9ddc7769",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -856,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "45d4f935",
+   "id": "edd5752e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "420a4801",
+   "id": "0a8abfd4",
    "metadata": {},
    "outputs": [
     {
@@ -891,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b4424a",
+   "id": "43642611",
    "metadata": {},
    "outputs": [],
    "source": []
