--- a/test_w_sample_size.ipynb
+++ b/test_w_sample_size.ipynb
@@ -100,7 +100,7 @@
     "    \n",
     "    # If the dataset is different from thyroid first adjourn it adding a new column\n",
     "    if name != 'thyroid':\n",
-    "        results[name] = np.zeros(len(test_sizes)*len(n_repetitions))\n",
+    "        results[name] = np.zeros(len(test_sizes)*n_repetitions)\n",
     "    \n",
     "    for test_size in test_sizes:\n",
     "        \n",
@@ -115,11 +115,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f63992d",
+   "id": "5c9f6b7f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Expected end of run: wednesday at 16.30"
+    "# Expected end of run: wednesday at 17.30"
    ]
   },
   {
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "9ddc7769",
+   "id": "63e539e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "edd5752e",
+   "id": "0dce002e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0a8abfd4",
+   "id": "a6a5fea9",
    "metadata": {},
    "outputs": [
     {
@@ -901,7 +901,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43642611",
+   "id": "8121d0f4",
    "metadata": {},
    "outputs": [],
    "source": []
